--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-# newpage.github.io
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Jagran Dental Nepal</title>
+</head>
+<body>
+	<h2>Jagaran Dental Home.</h2>
+</body>
+</html>
