--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Jagran Dental Nepal</title>
 </head>
 <body>
-	<h2>Jagaran Dental Home.</h2>
+	<h2>Jagaran Dental Home, Shantinagar, Kathmandu, Nepal</h2>
 </body>
 </html>
